# MLlib

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/: build_dataset.py  main.py
src/datasets/: __init__.py  classification_dataset.py  config.py
src/losses/: __init__.py  ce_loss.py  config.py
src/metrics/: __init__.py  accuracy.py  config.py
src/models/: __init__.py  config.py  resnet.py
src/trainers/: __init__.py  base_trainer.py  classification_trainer.py  config.py
src/utils/: config.py  device.py  logging.py  registry.py
